Update CSS to stylize character and commentator selection

--- a/css/custom.css
+++ b/css/custom.css
@@ -23,9 +23,79 @@
   margin-bottom: 50px;
 }
 
+.commblock {
+  border: 2px solid black;
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 2px #888888;
+}
+
 .match {
   border: 2px solid black;
   padding: 10px;
   margin-bottom: 5px;
   cursor: pointer;
+}
+
+.chart {
+  height: 400px;
+  width: 100%;
+}
+
+.clear {
+  clear: both;
+}
+
+.charto {
+  height: 900px;
+  width: 50%;
+  float: left;
+}
+
+#charselect {
+  position: fixed;
+  left: 330px;
+  top: 60px;
+  display: none;
+}
+
+#commselect {
+  position: fixed;
+  left: 300px;
+  top: 600px;
+  display: none;
+}
+
+map, area {
+  outline: none;
+}
+
+#p1charpic {
+  background-image: url('/assets/chars/fox.png');
+  background-repeat: no-repeat;
+}
+
+#p2charpic {
+  background-image: url('/assets/chars/fox.png');
+  background-repeat: no-repeat;
+  background-position: right top;
+}
+
+#commdiv {
+  width: 100px;
+  display: inline-block;
+}
+
+.commblock {
+  display: inline-block;
+  border: 3px solid black;
+  padding: 15px;
+  padding-left: 80px;
+  padding-right: 80px;
+}
+
+.commpic {
+  display: block;
+  margin-bottom: 10px;
+  border-radius: 10px;
 }
